--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta charset="UTF-8" />
     <title>Tetris with Lock Delay and Separated Sounds</title>
     <style>
-        #titleScreen {
-            z-index: 2;
-            /* ← これを追加 (position:absolute なので有効) */
-        }
 
         #bgCanvas {
             position: fixed;
@@ -45,6 +41,18 @@
             margin: 20px;
             justify-content: center;
             align-items: flex-start;
+        }
+
+        /* ゲーム統計情報表示領域 */
+        #statsArea {
+            width: 100px;
+            background-color: #222;
+            color: #fff;
+            padding: 10px;
+            box-sizing: border-box;
+            font-size: 14px;
+            margin-right: 20px;
+            text-align: left;
         }
 
         /* ★[左側エリア]: ゲームCanvas */
@@ -92,24 +100,15 @@
     </style>
 </head>
 
-<body>
+<body tabindex="0">
     <canvas id="bgCanvas"></canvas>
 
-    <!-- ★ 追加：キーボードフォーカス可 -->
-    <div id="titleScreen" tabindex="0" style="position:absolute; inset:0; display:flex;
-        flex-direction:column; justify-content:center; align-items:center;
-        background:#0005; color:white; font:24px sans-serif;">
-        <p style="margin:0 0 1rem 0; font-size:64px;">□■□■ TEsTRIS □■□■</p>
-        <p style="margin:0;">ver0.9 2025 akira maetomo</p>
-        <p style="margin:0;">PC only</p>
-        <p style="margin:0;">Press [K] for Keyboard / [G] for Gamepad</p>
-        <p style="margin:0;">move:L[A] R[S] drop[Z] rot:L[←] R[→]</p>
-    </div>
 
-    <div id="gameContainer">
+        <div id="gameContainer">
+            <div id="statsArea"></div>
         <!-- ★[左エリア]: ゲームCanvasを配置 -->
         <div id="leftArea">
-            <canvas id="gameCanvas"></canvas>
+<canvas id="gameCanvas" tabindex="0"></canvas>
         </div>
 
         <!-- ★[右エリア]: 縦に並べて、上=次ブロックCanvas、下=ダミー領域 -->
